--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-query": "^5.73.3",
     "firebase": "^11.6.0",
     "js-cookie": "^3.0.5",
     "ldrs": "^1.1.6",
     "lucide-react": "^0.487.0",
     "next": "15.0.1",
+    "node-cron": "^3.0.3",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
