--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.73.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "firebase": "^11.6.0",
     "js-cookie": "^3.0.5",
     "ldrs": "^1.1.6",
     "lucide-react": "^0.487.0",
     "next": "15.0.1",
     "node-cron": "^3.0.3",
+    "randomstring": "^1.3.1",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "19.1.1",
