--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.7",
+    "@types/react-big-calendar": "^1.16.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.3.31",
+    "lucide-react": "^0.511.0",
     "next": "14.2.7",
     "react": "^18",
+    "react-big-calendar": "^1.19.2",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "recharts": "^2.12.7",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
