--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-progress": "^1.1.7",
     "@types/react-big-calendar": "^1.16.2",
     "class-variance-authority": "^0.7.1",
@@ -21,7 +22,7 @@
     "react": "^18",
     "react-big-calendar": "^1.19.2",
     "react-dom": "^18",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "recharts": "^2.12.7",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
