--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "firebase": "^11.8.1",
     "framer-motion": "^11.3.31",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "next": "14.2.7",
+    "randomstring": "^1.3.1",
     "react": "^18",
     "react-big-calendar": "^1.19.2",
     "react-dom": "^18",
@@ -30,7 +33,9 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/randomstring": "^1.3.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
