--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "next": "14.2.7",
+    "next-themes": "^0.4.6",
     "randomstring": "^1.3.1",
     "react": "^18",
     "react-big-calendar": "^1.19.2",
