--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.8.1",
+    "form-data": "^4.0.3",
     "framer-motion": "^11.3.31",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "next": "14.2.7",
     "next-themes": "^0.4.6",
+    "oauth-1.0a": "^2.2.6",
     "randomstring": "^1.3.1",
     "react": "^18",
     "react-big-calendar": "^1.19.2",
