--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
     "form-data": "^4.0.3",
     "framer-motion": "^11.3.31",
     "js-cookie": "^3.0.5",
