--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cmdk": "^1.0.0",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
+    "dragula": "^3.7.3",
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
     "form-data": "^4.0.3",
@@ -41,9 +42,14 @@
     "randomstring": "^1.3.1",
     "react": "^18",
     "react-big-calendar": "^1.19.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-dragula": "^1.1.17",
     "react-icons": "^5.5.0",
+    "react-sortablejs": "^6.1.4",
     "recharts": "^2.12.7",
+    "sortablejs": "^1.15.6",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -53,6 +59,8 @@
     "@types/randomstring": "^1.3.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-dragula": "^1.1.3",
+    "@types/sortablejs": "^1.15.8",
     "eslint": "^8",
     "eslint-config-next": "15.4.1",
     "postcss": "^8",
