--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "cmdk": "^1.0.0",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
-    "dragula": "^3.7.3",
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
     "form-data": "^4.0.3",
@@ -45,6 +44,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-draggable": "^4.5.0",
     "react-dragula": "^1.1.17",
     "react-icons": "^5.5.0",
     "react-sortablejs": "^6.1.4",
@@ -59,7 +59,6 @@
     "@types/randomstring": "^1.3.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-dragula": "^1.1.3",
     "@types/sortablejs": "^1.15.8",
     "eslint": "^8",
     "eslint-config-next": "15.4.1",
