--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "framer-motion": "^11.3.31",
     "jose": "^6.0.11",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
     "oauth-1.0a": "^2.2.6",
+    "pdf-lib": "^1.17.1",
     "randomstring": "^1.3.1",
     "react": "^18",
     "react-big-calendar": "^1.19.2",
