--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@types/react-big-calendar": "^1.16.2",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,6 +33,7 @@
     "framer-motion": "^11.3.31",
     "jose": "^6.0.11",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "next": "15.4.1",
@@ -53,15 +53,19 @@
     "recharts": "^2.12.7",
     "sortablejs": "^1.15.6",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/randomstring": "^1.3.0",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.16.2",
     "@types/react-dom": "^18",
     "@types/sortablejs": "^1.15.8",
+    "@types/validator": "^13.15.2",
     "eslint": "^8",
     "eslint-config-next": "15.4.1",
     "postcss": "^8",
