--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.511.0",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "oauth-1.0a": "^2.2.6",
     "pdf-lib": "^1.17.1",
     "randomstring": "^1.3.1",
@@ -61,6 +62,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.0",
     "@types/randomstring": "^1.3.0",
     "@types/react": "^18",
     "@types/react-big-calendar": "^1.16.2",
