--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.7",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
@@ -35,7 +39,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
-    "lucide-react": "^0.511.0",
+    "lucide-react": "^0.544.0",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
@@ -53,8 +57,9 @@
     "react-player": "^3.3.1",
     "react-sortablejs": "^6.1.4",
     "recharts": "^2.12.7",
+    "sonner": "^2.0.7",
     "sortablejs": "^1.15.6",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "validator": "^13.15.15"
   },
