--- a/package.json
+++ b/package.json
@@ -57,10 +57,12 @@
     "react-player": "^3.3.1",
     "react-sortablejs": "^6.1.4",
     "recharts": "^2.12.7",
+    "sharp": "^0.34.3",
     "sonner": "^2.0.7",
     "sortablejs": "^1.15.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "twitter-api-v2": "^1.27.0",
     "validator": "^13.15.15"
   },
   "devDependencies": {
