--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "motion": "^12.23.24",
     "next": "15.4.7",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -70,6 +71,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
