--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "convex": "^1.28.0",
+    "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
@@ -63,7 +64,9 @@
     "nodemailer": "^7.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.5.0",
     "react-icons": "^5.5.0",
+    "react-sortablejs": "^6.1.4",
     "react-use": "^17.6.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
